fixed align

--- a/frontend/packages/ux-editor/src/containers/BreadcrumbsTaskNavigation/BreadcrumbsTaskNavigation.module.css
+++ b/frontend/packages/ux-editor/src/containers/BreadcrumbsTaskNavigation/BreadcrumbsTaskNavigation.module.css
@@ -1,3 +1,7 @@
+.container {
+  margin-left: var(--fds-spacing-1);
+}
+
 .active {
   text-decoration: underline;
 }
